Bug 665987 - Win32 nsFilePicker does not clear out mFiles. r=jmathies